--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.0",
     "jotai": "^2.6.0",
     "next": "13.5.6",
